// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListReplies filters by mixed query 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": "<HIGHLIGHT>foo</HIGHLIGHT> <HIGHLIGHT>foo</HIGHLIGHT> <HIGHLIGHT>foo</HIGHLIGHT>",
            "text": null,
          },
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": null,
            "text": "<HIGHLIGHT>foo</HIGHLIGHT> <HIGHLIGHT>foo</HIGHLIGHT>",
          },
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplies filters by moreLikeThis and given text, find replies containing hyperlinks with the said text 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [
              Object {
                "summary": "居有頃，倚柱彈其劍，歌曰：「<HIGHLIGHT>長鋏歸來乎</HIGHLIGHT>！<HIGHLIGHT>食無魚</HIGHLIGHT>。」左右以告。孟嘗君曰：「食之，比門下之客。」",
                "title": null,
                "url": "http://gohome.com",
              },
            ],
            "reference": null,
            "text": null,
          },
          "node": Object {
            "id": "referenceUrl",
          },
        },
      ],
    },
  },
}
`;

exports[`ListReplies filters by moreLikeThis and given text, find replies with the said URL's content 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": null,
            "text": "<HIGHLIGHT>bar</HIGHLIGHT>",
          },
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": null,
            "text": "<HIGHLIGHT>bar</HIGHLIGHT>",
          },
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": null,
            "text": "<HIGHLIGHT>bar</HIGHLIGHT> <HIGHLIGHT>bar</HIGHLIGHT> <HIGHLIGHT>bar</HIGHLIGHT>",
          },
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": "<HIGHLIGHT>bar</HIGHLIGHT> <HIGHLIGHT>bar</HIGHLIGHT>",
            "text": null,
          },
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
    },
  },
}
`;

exports[`ListReplies filters by time range: 2020/2/4 <= createdAt <= 2020/2/6 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-02-04T00:00:00.000Z",
            "id": "rumor",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-04T00:00:00.000Z",
            "id": "referenceUrl",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-05T00:00:00.000Z",
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-06T00:00:00.000Z",
            "id": "moreLikeThis1",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplies filters by time range: createdAt <= 2020/2/6 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-02-04T00:00:00.000Z",
            "id": "rumor",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-04T00:00:00.000Z",
            "id": "referenceUrl",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-05T00:00:00.000Z",
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-06T00:00:00.000Z",
            "id": "moreLikeThis1",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplies filters by time range: createdAt > 2020/2/6 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-02-07T00:00:00.000Z",
            "id": "userFoo",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies filters: moreLikeThis = foo 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": "<HIGHLIGHT>foo</HIGHLIGHT> <HIGHLIGHT>foo</HIGHLIGHT> <HIGHLIGHT>foo</HIGHLIGHT>",
            "text": null,
          },
          "node": Object {
            "id": "moreLikeThis2",
            "text": "bar bar bar",
          },
        },
        Object {
          "highlight": Object {
            "hyperlinks": Array [],
            "reference": null,
            "text": "<HIGHLIGHT>foo</HIGHLIGHT> <HIGHLIGHT>foo</HIGHLIGHT>",
          },
          "node": Object {
            "id": "moreLikeThis1",
            "text": "foo foo",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJtb3JlTGlrZVRoaXMyIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplies filters: selfOnly (userId = foo) 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
            "user": Object {
              "id": "foo",
            },
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJ1c2VyRm9vIl0=",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies filters: type = RUMOR 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "rumor",
            "type": "RUMOR",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJydW1vciJd",
        "lastCursor": "WyJydW1vciJd",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies filters: types = RUMOR, NOT_RUMOR 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "rumor",
            "type": "RUMOR",
          },
        },
        Object {
          "node": Object {
            "id": "referenceUrl",
            "type": "NOT_RUMOR",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplies filters: userId = foo 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
            "user": Object {
              "id": "foo",
            },
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies filters: userIds = [foo] 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
            "user": Object {
              "id": "foo",
            },
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies handles selfOnly filter properly if not logged in 1`] = `
Object {
  "data": Object {
    "ListReplies": null,
  },
  "errors": Array [
    [GraphQLError: selfOnly can be set only after log in],
  ],
}
`;

exports[`ListReplies lists all replies 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "cursor": "WyJ1c2VyRm9vIl0=",
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "cursor": "WyJydW1vciJd",
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "cursor": "WyJyZWZlcmVuY2VVcmwiXQ==",
          "node": Object {
            "id": "referenceUrl",
          },
        },
        Object {
          "cursor": "WyJtb3JlTGlrZVRoaXMyIl0=",
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "cursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 5,
    },
  },
}
`;

exports[`ListReplies sorts 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "node": Object {
            "id": "referenceUrl",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzE1ODEwMzM2MDAwMDAsInVzZXJGb28iXQ==",
        "lastCursor": "WzE1ODA3NzQ0MDAwMDAsInJlZmVyZW5jZVVybCJd",
      },
      "totalCount": 5,
    },
  },
}
`;

exports[`ListReplies supports after 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 5,
    },
  },
}
`;

exports[`ListReplies supports before 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "node": Object {
            "id": "referenceUrl",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 5,
    },
  },
}
`;
